fix spacing

--- a/src/systems/ec/implementations/vanilla/packages/ec-component-footer-stanardised/ec-component-footer-standardised.scss
+++ b/src/systems/ec/implementations/vanilla/packages/ec-component-footer-stanardised/ec-component-footer-standardised.scss
@@ -164,7 +164,6 @@
     padding-top: $ecl-spacing-m;
   }
 
-  .ecl-footer-standardised__section7,
   .ecl-footer-standardised__section8,
   .ecl-footer-standardised__section9 {
     margin-top: $ecl-spacing-m;
@@ -235,12 +234,14 @@
       grid-area: 4 / 2 / 5 / 3;
       -ms-grid-column: 3;
       -ms-grid-row: 4;
+      margin-top: $ecl-spacing-xl;
     }
 
     .ecl-footer-standardised__section9 {
       grid-area: 4 / 3 / 5 / 4;
       -ms-grid-column: 5;
       -ms-grid-row: 4;
+      margin-top: $ecl-spacing-xl;
     }
   }
 }
